--- a/model/LargeScaleModel/Parser/Parser-Tensorflow/connection_info/makefile
+++ b/model/LargeScaleModel/Parser/Parser-Tensorflow/connection_info/makefile
@@ -1,4 +1,4 @@
 all:
-	g++ -std=c++17 -I/usr/include/hdf5/serial/ ncc.cc model.cc -o ncc -lhdf5 -lboost_system -lboost_filesystem
+	h5c++ -std=c++17 -I/usr/include/hdf5/serial/ ncc.cc model.cc -o ncc -lboost_system -lboost_filesystem
 clean:
 	rm -rf ncc
